--- a/source/index.html
+++ b/source/index.html
@@ -2,12 +2,171 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Название проекта</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>CAT ENERGY</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="favicons/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/index.js" defer></script>
   </head>
   <body class="page__body">
-    <header class="header">Шапка сайта</header>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a class="nav__logo logo" href="index.html">
+            <picture>
+              <source media="(min-width: 1440px)" width="70" height="59" type="image/svg+xml" srcset="images/site-logo/svg/logo-img-desktop.svg">
+              <source media="(min-width: 768px)"  width="60" height="50" type="image/svg+xml" srcset="images/site-logo/svg/logo-img-tablet.svg">
+              <img class="logo__image" src="images/site-logo/svg/logo-img-mobile.svg" width="33" height="38" alt="Логотип Cat Energy».">
+            </picture>
+            <img class="logo__text" src="images/site-logo/svg/logo-text.svg" width="101" height="18" alt="Надпись Cat Energy».">
+          </a>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link nav__link--current" href="index.html">Главая</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Подбор программы</a>
+            </li>
+          </ul>
+          <button class="nav__toggle" type="button">
+            <span class="visually-hidden">Переключение меню</span>
+          </button>
+        </nav>
+      </div>
+    </header>
+    <main class="main-container">
+      <div class="container">
+        <h1 class="page__title">Функциональное питание для котов</h1>
+        <section class="hero">
+          <h2 class="hero__title visually-hidden">Подбор программы питания</h2>
+          <p class="hero__slogan">Занялся собой? Займись котом!</p>
+          <a class="hero__button" href="#">Подобрать программу</a>
+          <picture>
+            <source media="(min-width: 1440px)" width="552" height="499" type="image/png" srcset="images/hero/hero-img-desktop@1x.png 1x, images/hero/hero-img-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" width="709" height="609" type="image/png" srcset="images/hero/hero-img-tablet@1x.png 1x, images/hero/hero-img-tablet@2x.png 2x">
+            <img class="hero__image" src="images/hero/hero-img-mobile@1x.png" srcset="images/hero/hero-img-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания для котов 'Cat Energy' со вкусом курицы">
+          </picture>
+        </section>
+        <section class="catalogs">
+          <h2 class="catalogs__title visually-hidden">Типы каталогов</h2>
+          <ul class="catalogs__list">
+            <li class="catalogs__item catalogs__item--slim catalog">
+              <h3 class="catalog__title">похудение</h3>
+              <p class="catalog__description">Ваш кот весит больше собаки и почти утратил способность
+                  лазить по деревьям? Пора на диету! Cat Energy Slim поможет
+                  вашему питомцу сбросить лишний вес.</p>
+              <a class="catalog__link" href="#">каталог slim</a>
+            </li>
+            <li class="catalogs__item catalogs__item--pro catalog">
+              <h3 class="catalog__title">набор массы</h3>
+              <p class="catalog__description">Заработать авторитет среди дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить
+                необходимые мышцы!</p>
+              <a class="catalog__link" href="#">каталог pro</a>
+            </li>
+          </ul>
+        </section>
+        <section class="operating-principle">
+          <h2 class="operating-principle__title">Как это работает</h2>
+          <ol class="operating-principle__list">
+            <li class="operating-principle__item step step--one">Функциональное питание содержит только полезные питательные вещества.
+            </li>
+            <li class="operating-principle__item step step--two">Выпускается в виде порошка,
+                который нужно лишь залить
+                кипятком и готово.
+            </li>
+            <li class="operating-principle__item step step--three">Замените один-два приема
+                обычной еды на наше
+                функциональное питание.
+            </li>
+            <li class="operating-principle__item step step--three">Уже через месяц наслаждайтесь
+                изменениями к лучшему
+                вашего питомца!
+            </li>
+          </ol>
+        </section>
+        <section class="example">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой
+            обычный корм на Cat Energy Slim. Отличный результат
+            без изнуряющих тренировок! При этом он не менял своих
+            привычек и по-прежнему спит по 16 часов в день.</p>
+          <ul class="example__data-list">
+            <li class="example__data-item data-item">
+              <p class="data-item__name">Снижение веса</p>
+              <p class="data-item__meaning">5 кг</p>
+            </li>
+            <li class="example__data-item data-item">
+              <span class="data-item__name">Затрачено времени</span>
+              <span class="data-item__meaning">60 дней</span>
+            </li>
+            <li class="example__data-item data-item">
+              <p class="data-item__name">Затраты на питание:</p>
+              <p class="data-item__meaning">15 000 РУБ.</p>
+            </li>
+          </ul>
+          <div class="slider">
+            <picture>
+              <source media="(min-width: 768px)" width="560" height="512" type="image/png" srcset="images/cat/cat-before-tablet-desktop@1x.png 1x, images/cat/cat-before-tablet-desktop@2x.png 2x">
+              <img class="slider__image" src="images/cat/cat-before-mobile@1x.png" srcset="images/cat/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Толстый кот">
+            </picture>
+            <picture>
+              <source media="(min-width: 768px)" width="560" height="512" type="image/png" srcset="images/cat/cat-after-tablet-desktop@1x.png 1x, images/cat/cat-after-tablet-desktop@2x.png 2x">
+              <img class="slider__image" src="images/cat/cat-after-mobile@1x.png" srcset="images/cat/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Стройный кот">
+            </picture>
+          </div>
+        </section>
+      </div>
+      <section class="map">
+        <h2>Наш адрес</h2>
+        <picture>
+          <source media="(min-width: 768px)"  width="113" height="106" type="image/png" srcset="images/site-logo/png-for-map/logo-img-tablet-desktop@1x.png 1x, images/site-logo/png-for-map/logo-img-tablet-desktop@2x.png 2x">
+          <img class="map__logo" src="images/site-logo/png-for-map/logo-img-mobile@1x.png" srcset="images/site-logo/png-for-map/logo-img-mobile@2x.png 2x" width="113" height="106" alt="Логотип 'Cat Energy'">
+        </picture>
+      </section>
+      <div class="container">
+        <section class="invitation">
+          <h2 class="invitation__title">Приглашаем к сотрудничеству дилеров!</h2>
+          <address class="invitation__address address">
+            <p class="address__street-house">ул. Большая Конюшенная, д. 19/8</p>
+            <p class="address__city">Санкт-Петербург</p>
+          </address>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <a class="footer__logo logo" href="#">
+          <img class="logo__text" src="images/site-logo/svg/logo-text.svg" width="128" height="24" alt="Надпись Cat Energy».">
+        </a>
+        <ul class="social">
+          <li class="social__item">
+            <a class="social__link social__link--vk" href="#">
+              <span class="visually-hidden">Мы Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="#">
+              <span class="visually-hidden">Мы в Ютубе</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--tg" href="#">
+              <span class="visually-hidden">Мы в Телеграм</span>
+            </a>
+          </li>
+        </ul>
+        <a class="footer__developer developer" href="https://htmlacademy.ru/">
+          <p class="developer__name">HTML Academy</p>
+          <img class="developer__logo" src="#" width="27" height="34" alt="">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
