Добавляет растровую графику

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html class="page-catalog" lang="ru">
   <head>
     <meta charset="UTF-8">
     <title>CAT ENERGY</title>
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/index.js" defer></script>
   </head>
-  <body class="page__body">
+  <body class="page-catalog__body">
     <header class="header">
       <div class="container">
         <nav class="nav">
@@ -38,7 +38,7 @@
     </header>
     <main>
       <div class="container">
-        <h1 title="page__title">Каталог продукции</h1>
+        <h1 title="page-catalog__title">Каталог продукции</h1>
         <section class="products">
           <h2 class="visually-hidden">Наши товары</h2>
           <ul class="products__list">
@@ -234,14 +234,14 @@
               </ul>
               <a class="card__link button" href="#">Заказать</a>
             </li>
-            <li class="products__product-card card-show-more">
-              <a class="card-show-more__link" href="#">+
+            <li class="products__product-card card--show-more">
+              <a class="card__link" href="#">+
               </a>
-              <a class="card-show-more__link" href="#">
-                <h3 class="card-show-more__title">Показать еще 100500 товаров</h3>
+              <a class="card__link" href="#">
+                <h3 class="card__title">Показать еще 100500 товаров</h3>
               </a>
-              <p class="card-show-more__text">На самом деле вкусов гораздо больше!</p>
-              <a class="card-show-more__link button button--secondary" href="#">Показать все</a>
+              <p class="card__text">На самом деле вкусов гораздо больше!</p>
+              <a class="card__link button button--secondary" href="#">Показать все</a>
             </li>
           </ul>
         </section>
