--- a/source/index.html
+++ b/source/index.html
@@ -97,18 +97,18 @@
             обычный корм на Cat Energy Slim. Отличный результат
             без изнуряющих тренировок! При этом он не менял своих
             привычек и по-прежнему спит по 16 часов в день.</p>
-          <ul class="example__data-list">
-            <li class="example__data-item data-item">
-              <p class="data-item__name">Снижение веса</p>
-              <p class="data-item__meaning">5 кг</p>
+          <ul class="example__results-list">
+            <li class="example__results-item">
+              <p class="example__result-name">Снижение веса</p>
+              <p class="example__result-value">5 кг</p>
             </li>
-            <li class="example__data-item data-item">
-              <span class="data-item__name">Затрачено времени</span>
-              <span class="data-item__meaning">60 дней</span>
+            <li class="example__results-item">
+              <span class="example__result-name">Затрачено времени</span>
+              <span class="example__result-value">60 дней</span>
             </li>
-            <li class="example__data-item data-item">
-              <p class="data-item__name">Затраты на питание:</p>
-              <p class="data-item__meaning">15 000 РУБ.</p>
+            <li class="example__results-item example__result example__result--price">
+              <p class="example__result-name">Затраты на питание:</p>
+              <p class="example__result-value">15 000 РУБ.</p>
             </li>
           </ul>
           <div class="slider">
